--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <svg class="contact-item" width="16" height="12">
                                 <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
-                            <p>info@devstudio.com</p>
+                            info@devstudio.com
                     </a>
                     </li>
                     <li class="contact-list-item">
@@ -42,7 +42,7 @@
                             <svg class="contact-item" width="10" height="16">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
-                            <p>+38 096 111 11 11</p>
+                            +38 096 111 11 11
                         </a>
                     </li>
                 </ul>
@@ -269,42 +269,42 @@
                     <h2 class="subtitle">Постійні клієнти</h2>
                     <ul class="about-clients list">
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-3"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-4"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-5"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="clients">
-                                <a class="clients-wrapper">
+                                <a class="clients-wrapper" href="">
                                     <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-6"></use>
                                     </svg>
@@ -315,46 +315,48 @@
             </section>            
         </main>
         <footer class="page-footer">
-            <div class="container footer-container">
-                <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
-                <address class="contact-address">
-                    <span>м. Київ, пр-т Лесі Українки, 26</span>
-                    <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>                
-                </address>
-            </div>
-            <div class="footer-links-container">
-                <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
-                <ul class="social-list list">
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="container">
+                <div class="footer-container">
+                    <address class="contact-address">
+                        <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
+                        <span>м. Київ, пр-т Лесі Українки, 26</span>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </address>
+                <div class="footer-links-container">
+                        <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
+                        <ul class="social-list list">
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                </div>
+                </div>
             </div>
         </footer>
     </body>
