--- a/portfolio.html
+++ b/portfolio.html
@@ -30,16 +30,20 @@
             </nav>
             <ul class="contacts-list list">
                 <li class="contact-list-item">
-                    <svg class="contact-item" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-mail"></use>
-                    </svg>
-                    <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact-mail link" href="mailto:info@devstudio.com">
+                        <svg class="contact-item" width="16" height="12">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="contact-list-item">
-                    <svg class="contact-item" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-smartphone"></use>
-                    </svg>
-                    <a class="contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contact-phone link" href="tel:+380961111111">
+                        <svg class="contact-item" width="10" height="16">
+                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
@@ -142,14 +146,49 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container footer-container">
-            <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
-            <address class="contact-address">
-                <span>м. Київ, пр-т Лесі Українки, 26</span>
-                <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>                
-            </address>
-        </div>
+            <div class="container">
+                <div class="footer-container">
+                    <address class="contact-address">
+                        <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
+                        <span>м. Київ, пр-т Лесі Українки, 26</span>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </address>
+                    <div class="footer-links-container">
+                        <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
+                        <ul class="social-list list">
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
     </footer>
 </body>
 </html>
