--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +7,10 @@
     <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body>
     <header class="page-header">
         <div class="container header-container">
@@ -27,10 +21,10 @@
                         <a class="nav-list-link link" href="index.html">Студія</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="#"><span class="accent">Портфоліо</span></a>
+                        <a  class="nav-list-link nav-list-link-hover link" href="#"><span class="accent">Портфоліо</span></a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="#">Контакти</a>
+                        <a  class="nav-list-link link" href="#">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -55,23 +49,18 @@
         </div>
     </header>
     <main>
-        <!--Project-->
+        <!--Project-->  
         <section class="project">
             <div class="container filter-container">
                 <ul class="project-filter">
-                    <li class="projects-filter list"><button class="project-filter-button" type="button">Усі</button>
-                    </li>
-                    <li class="projects-filter list"><button class="project-filter-button"
-                            type="button">Веб-сайти</button></li>
-                    <li class="projects-filter list"><button class="project-filter-button"
-                            type="button">Додатки</button></li>
-                    <li class="projects-filter list"><button class="project-filter-button" type="button">Дизайн</button>
-                    </li>
-                    <li class="projects-filter list"><button class="project-filter-button"
-                            type="button">Маркетинг</button></li>
-                </ul>
+                    <li class="projects-filter list"><button  class="project-filter-button" type="button">Усі</button></li>
+                    <li class="projects-filter list"><button  class="project-filter-button" type="button">Веб-сайти</button></li>
+                    <li class="projects-filter list"><button  class="project-filter-button" type="button">Додатки</button></li>
+                    <li class="projects-filter list"><button  class="project-filter-button" type="button">Дизайн</button></li>
+                    <li class="projects-filter list"><button  class="project-filter-button" type="button">Маркетинг</button></li>
+                </ul> 
                 <ul class="project-items-list">
-                    <li class="project-list-items list">
+                    <li class="project-list-items project-overlay list">
                         <a class="project-list link" href="">
                             <img src="./images/img-2(1).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
@@ -79,13 +68,15 @@
                                 <p class="project-list-item">Веб-сайт</p>
                             </div>
                         </a>
+                        <span class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу.</span>
                     </li>
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
                             <img src="./images/img-2(2).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Постер New Orlean vs Golden Star</h3 class="project-item">
-                                <p class="project-list-item">Дизайн</p>
+                                    <p class="project-list-item">Дизайн</p>
                             </div>
                         </a>
                     </li>
@@ -94,7 +85,7 @@
                             <img src="./images/img-2(3).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Ресторан Seafood</h3 class="project-item">
-                                <p class="project-list-item">Додаток</p>
+                                    <p class="project-list-item">Додаток</p>                                
                             </div>
                         </a>
                     </li>
@@ -103,7 +94,7 @@
                             <img src="./images/img-2(4).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт Prime</h3 class="project-item">
-                                <p class="project-list-item">Маркетинг</p>
+                                    <p class="project-list-item">Маркетинг</p>
                             </div>
                         </a>
                     </li>
@@ -112,7 +103,7 @@
                             <img src="./images/img-2(5).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт Boxes</h3 class="project-item">
-                                <p class="project-list-item">Додаток</p>
+                                    <p class="project-list-item">Додаток</p>
                             </div>
                         </a>
                     </li>
@@ -121,7 +112,7 @@
                             <img src="./images/img-2(6).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Inspiration has no Borders</h3 class="project-item">
-                                <p class="project-list-item">Веб-сайт</p>
+                                    <p class="project-list-item">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
@@ -130,7 +121,7 @@
                             <img src="./images/img-2(7).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Видання Limited Edition</h3 class="project-item">
-                                <p class="project-list-item">Дизайн</p>
+                                    <p class="project-list-item">Дизайн</p>
                             </div>
                         </a>
                     </li>
@@ -139,7 +130,7 @@
                             <img src="./images/img-2(8).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт LAB</h3 class="project-item">
-                                <p class="project-list-item">Маркетинг</p>
+                                    <p class="project-list-item">Маркетинг</p>
                             </div>
                         </a>
                     </li>
@@ -152,53 +143,54 @@
                             </div>
                         </a>
                     </li>
-                </ul>
+                </ul>       
             </div>
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container footer-container">
-            <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
-            <address class="contact-address">
-                <span>м. Київ, пр-т Лесі Українки, 26</span>
-                <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
-            <div class="footer-links-container">
-                <strong class="footer-links-title">Приєднуйтесь</strong>
-                <ul class="social-list list">
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="container">
+                <div class="footer-container">
+                    <address class="contact-address">
+                        <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
+                        <span>м. Київ, пр-т Лесі Українки, 26</span>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </address>
+                    <div class="footer-links-container">
+                        <strong class="footer-links-title">Приєднуйтесь</strong>
+                        <ul class="social-list list">
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-list-item">
+                                <a class="social-list-link" href="">
+                                    <svg class="social-list-icon" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
     </footer>
 </body>
-
 </html>
