--- a/portfolio.html
+++ b/portfolio.html
@@ -61,15 +61,18 @@
                 </ul> 
                 <ul class="project-items-list">
                     <li class="project-list-items list">
-                        <a class="project-list  project-overlay link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(1).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Технокряк</h3>
                                 <p class="project-list-item">Веб-сайт</p>
                             </div>
                         </a>
+                    <div class="project-overlay">
                         <span class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                        вичерпні відомості про компанію чи приватну особу.</span>
+                            вичерпні відомості про компанію чи приватну особу.</span>                        
+                    </div>    
+
                     </li>
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
@@ -148,49 +151,49 @@
         </section>
     </main>
     <footer class="page-footer">
-            <div class="container">
-                <div class="footer-container">
-                    <address class="contact-address">
-                        <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
-                        <span>м. Київ, пр-т Лесі Українки, 26</span>
-                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </address>
-                    <div class="footer-links-container">
-                        <strong class="footer-links-title">Приєднуйтесь</strong>
-                        <ul class="social-list list">
-                            <li class="social-list-item">
-                                <a class="social-list-link" href="">
-                                    <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="social-list-item">
-                                <a class="social-list-link" href="">
-                                    <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="social-list-item">
-                                <a class="social-list-link" href="">
-                                    <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="social-list-item">
-                                <a class="social-list-link" href="">
-                                    <svg class="social-list-icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="container footer-container">
+            <div class="footer-contacts-container">
+                <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
+                <address class="contact-address">
+                    <span>м. Київ, пр-т Лесі Українки, 26</span>
+                    <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </address>
             </div>
+            <div class="footer-links-container">
+                <strong class="footer-links-title">Приєднуйтесь</strong>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
