--- a/portfolio.html
+++ b/portfolio.html
@@ -61,17 +61,21 @@
                 </ul> 
                 <ul class="project-items-list">
                     <li class="project-list-items list">
-                        <a class="project-list link" href="">
-                            <img src="./images/img-2(1).png" width="370" alt="фото проекту">
-                            <div class="project-list-text">
-                                <h3 class="project-item">Технокряк</h3>
-                                <p class="project-list-item">Веб-сайт</p>
+                        <div class="project-wrapper">
+                            <a class="project-list link" href="">
+                                <img src="./images/img-2(1).png" width="370" alt="фото проекту">
+                                <div class="project-list-text">
+                                    <h3 class="project-item">Технокряк</h3>
+                                    <p class="project-list-item">Веб-сайт</p>
+                                </div>
+
+                            </a>
+                            <div class="project-overlay">
+                                <span class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</span>
                             </div>
-                        </a>
-                    <div class="project-overlay">
-                        <span class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                            вичерпні відомості про компанію чи приватну особу.</span>                        
-                    </div>    
+                        </div>
 
                     </li>
                     <li class="project-list-items list">
