--- a/index.html
+++ b/index.html
@@ -366,6 +366,23 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="footer-subscription-container">
+                <strong class="footer-links-title">Підпишіться на розсилку</strong>
+                <div class="subscription-input-wrapper">
+                <form action="">
+                    <label for="" class="subscription-form-field">
+                        <input class="subscription-form-input" name="user_mail" type="email" placeholder="E-mail" required>
+                    </label>
+                </form>
+                <button class="subscription-form-submit-btn" type="submit">
+                    Підписатися
+                    <svg class="subscription-icon" wight="24" height="24">
+                        <use href="/images/sprite.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+                </div>
+            </div>
         </div>
     </footer>
     
@@ -377,6 +394,53 @@
                     <use href="./images/sprite.svg#close-icon"></use>
                 </svg>
             </button>
+            <p class="modal-header">Залиште свої дані, ми вам передзвонимо</p>
+
+            <form action="" class="contact-form">
+                <label for="" class="contact-form-field">
+                    <p class="contact-text-name">Ім'я</p>
+                    <span class="contact-form-input-wrapper">
+                        <input class="contact-form-input" name="user_name" type="text" required minlength="3">
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/sprite.svg#icon-person-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label for="" class="contact-form-field">
+                    <p class="contact-text-name">Телефон</p>
+                    <span class="contact-form-input-wrapper">
+                        <input class="contact-form-input" name="user_phone" type="tel" required pattern="[0-9]{3}-[0-9]{4}-[0-9]{3}">
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/sprite.svg#icon-phone-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label for="" class="contact-form-field">
+                    <p class="contact-text-name">Пошта</p>
+                    <span class="contact-form-input-wrapper">
+                    <input class="contact-form-input" name="user_mail" type="email" required>
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/sprite.svg#icon-email-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label for="" class="contact-form-field">
+                    <p class="contact-text-name">Коментар</p>                    
+                    <textarea class="contact-form-message" name="user_message" placeholder="Введіть текст"></textarea>
+                </label>
+
+                <div class="contact-form-checkbox-wrapper">
+                    <input  class="contact-form-checkbox visuality-hidden" name="accept_policy" type="checkbox" id="policy-checkbox" required>
+                    <label class="contact-form-checkbox-label" for="policy-checkbox" >
+                        Погоджуюся з розсилкою та приймаю &nbsp <a href="#"> Умови договору</a>
+                    </label>
+                </div>
+
+                <button class="contact-form-submit-btn" type="submit">Відправити</button>
+            </form>
+
+
+
         </div>
     </div>
 
